[gd_scene load_steps=7 format=3 uid="uid://bh7h5y83bw4o4"]

[ext_resource type="Script" path="res://apps/painter/scenes/shape_menu.gd" id="1_lv1tk"]
[ext_resource type="Script" path="res://apps/painter/nodes/shape_button.gd" id="2_ufv41"]
[ext_resource type="Texture2D" uid="uid://dxpyxfysoqmyu" path="res://apps/painter/assets/icons/rotate_left.svg" id="5_vlw62"]
[ext_resource type="Texture2D" uid="uid://by73s6jeshln5" path="res://apps/painter/assets/icons/decrease_size.svg" id="6_8ylm1"]
[ext_resource type="Texture2D" uid="uid://26p63shqhm1k" path="res://apps/painter/assets/icons/rotate_right.svg" id="18_aiin7"]
[ext_resource type="Texture2D" uid="uid://4vh1caqutpo" path="res://apps/painter/assets/icons/increase_size.svg" id="19_urgnv"]

[node name="ShapePanelButton" type="Button"]
unique_name_in_owner = true
custom_minimum_size = Vector2(80, 80)
offset_right = 80.0
offset_bottom = 80.0
size_flags_horizontal = 0
size_flags_vertical = 0
toggle_mode = true
keep_pressed_outside = true
expand_icon = true
script = ExtResource("1_lv1tk")
container_path = NodePath("MarginContainer")

[node name="CurrentShape" type="Button" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(80, 80)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(40, 40)
size_flags_horizontal = 0
size_flags_vertical = 0
mouse_filter = 2
theme_type_variation = &"SuccessButton"
disabled = true
flat = true
script = ExtResource("2_ufv41")

[node name="MarginContainer" type="MarginContainer" parent="."]
visible = false
offset_right = 48.0
offset_bottom = 48.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
offset_left = 24.0
offset_top = 24.0
offset_right = 604.0
offset_bottom = 290.0
theme_override_constants/separation = 12

[node name="ShapesLabel" type="Label" parent="MarginContainer/VBoxContainer"]
theme_override_constants/line_spacing = 50
theme_override_font_sizes/font_size = 24
text = "S H A P E S"
horizontal_alignment = 2
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
theme_override_constants/separation = 10

[node name="LeftTools" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
size_flags_vertical = 3
theme_override_constants/separation = 10
alignment = 1

[node name="RotateLeftButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/LeftTools"]
unique_name_in_owner = true
custom_minimum_size = Vector2(80, 80)
theme_type_variation = &"CircleButton_PaddingSm"
icon = ExtResource("5_vlw62")
icon_alignment = 1
expand_icon = true

[node name="DecreaseSizeButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/LeftTools"]
unique_name_in_owner = true
custom_minimum_size = Vector2(80, 80)
theme_type_variation = &"CircleButton_PaddingSm"
icon = ExtResource("6_8ylm1")
icon_alignment = 1
expand_icon = true

[node name="Shapes" type="ScrollContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(400, 100)
size_flags_vertical = 3
horizontal_scroll_mode = 2
vertical_scroll_mode = 0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/Shapes"]
offset_right = 1048.0
offset_bottom = 100.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 8

[node name="Button" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/Shapes/HBoxContainer"]
custom_minimum_size = Vector2(80, 80)
size_flags_vertical = 4
theme_type_variation = &"TagButton_Selected"
script = ExtResource("2_ufv41")

[node name="Button2" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/Shapes/HBoxContainer"]
custom_minimum_size = Vector2(80, 80)
size_flags_vertical = 4
theme_type_variation = &"TagButton"
script = ExtResource("2_ufv41")
shape = 2

[node name="Button3" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/Shapes/HBoxContainer"]
custom_minimum_size = Vector2(80, 80)
size_flags_vertical = 4
theme_type_variation = &"TagButton"
script = ExtResource("2_ufv41")
shape = 3

[node name="Button4" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/Shapes/HBoxContainer"]
custom_minimum_size = Vector2(80, 80)
size_flags_vertical = 4
theme_type_variation = &"TagButton"
script = ExtResource("2_ufv41")
shape = 4

[node name="Button5" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/Shapes/HBoxContainer"]
custom_minimum_size = Vector2(80, 80)
size_flags_vertical = 4
theme_type_variation = &"TagButton"
script = ExtResource("2_ufv41")
shape = 5

[node name="Button6" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/Shapes/HBoxContainer"]
custom_minimum_size = Vector2(80, 80)
size_flags_vertical = 4
theme_type_variation = &"TagButton"
script = ExtResource("2_ufv41")
shape = 6

[node name="Button7" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/Shapes/HBoxContainer"]
custom_minimum_size = Vector2(80, 80)
size_flags_vertical = 4
theme_type_variation = &"TagButton"
script = ExtResource("2_ufv41")
shape = 7

[node name="Button8" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/Shapes/HBoxContainer"]
custom_minimum_size = Vector2(80, 80)
size_flags_vertical = 4
theme_type_variation = &"TagButton"
script = ExtResource("2_ufv41")
shape = 8

[node name="Button9" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/Shapes/HBoxContainer"]
custom_minimum_size = Vector2(80, 80)
size_flags_vertical = 4
theme_type_variation = &"TagButton"
script = ExtResource("2_ufv41")
shape = 9

[node name="Button10" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/Shapes/HBoxContainer"]
custom_minimum_size = Vector2(80, 80)
size_flags_vertical = 4
theme_type_variation = &"TagButton"
script = ExtResource("2_ufv41")
shape = 10

[node name="Button11" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/Shapes/HBoxContainer"]
custom_minimum_size = Vector2(80, 80)
size_flags_vertical = 4
theme_type_variation = &"TagButton"
script = ExtResource("2_ufv41")
shape = 11

[node name="Button12" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/Shapes/HBoxContainer"]
custom_minimum_size = Vector2(80, 80)
size_flags_vertical = 4
theme_type_variation = &"TagButton"
script = ExtResource("2_ufv41")
shape = 12

[node name="RightTools" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
theme_override_constants/separation = 10
alignment = 1

[node name="RotateRightButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/RightTools"]
unique_name_in_owner = true
custom_minimum_size = Vector2(80, 80)
theme_type_variation = &"CircleButton_PaddingSm"
icon = ExtResource("18_aiin7")
icon_alignment = 1
expand_icon = true

[node name="IncreaseSizeButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/RightTools"]
unique_name_in_owner = true
custom_minimum_size = Vector2(80, 80)
theme_type_variation = &"CircleButton_PaddingSm"
icon = ExtResource("19_urgnv")
icon_alignment = 1
expand_icon = true
